# semantic-sdp-py

./: README.md  pyproject.toml
semanticsdp/: __init__.py  _base.py  _dataclass_fix.py  candidate_info.py  codec_info.py  crypto_info.py  datachannel_info.py  direction.py  direction_way.py  dtls_info.py  ice_info.py  media_info.py  rid_info.py  rtcp_feedback_info.py  sdp_info.py  sdp_writer.py  setup.py  simulcast_info.py  simulcast_stream_info.py  source_group_info.py  source_info.py  stream_info.py  track_encoding_info.py  track_info.py
semanticsdp/transform/: __init__.py  sdp_grammar.py  sdp_parser.py  sdp_writer.py
